--- a/PROJECT-REACT-JAVA/Barber_Booking/package.json
+++ b/PROJECT-REACT-JAVA/Barber_Booking/package.json
@@ -10,18 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@reduxjs/toolkit": "^2.8.2",
-    "antd": "^5.26.0",
+    "@shadcn/ui": "^0.0.4",
+    "antd": "^5.26.2",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.523.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
+    "recharts": "^3.0.2",
     "redux-saga": "^1.3.0"
   },
   "devDependencies": {
