--- a/PROJECT-REACT-JAVA/Barber_Booking/package.json
+++ b/PROJECT-REACT-JAVA/Barber_Booking/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
+    "react-select": "^5.10.1",
     "recharts": "^3.0.2",
     "redux-saga": "^1.3.0"
   },
