--- a/PROJECT-REACT-JAVA/Barber_Booking/package.json
+++ b/PROJECT-REACT-JAVA/Barber_Booking/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
     "react-select": "^5.10.1",
+    "react-transition-group": "^4.4.5",
     "recharts": "^3.0.2",
     "redux-saga": "^1.3.0"
   },
