--- a/PROJECT-REACT-JAVA/Barber_Booking/package.json
+++ b/PROJECT-REACT-JAVA/Barber_Booking/package.json
@@ -26,9 +26,11 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
     "react-select": "^5.10.1",
+    "react-slick": "^0.30.3",
     "react-transition-group": "^4.4.5",
     "recharts": "^3.0.2",
-    "redux-saga": "^1.3.0"
+    "redux-saga": "^1.3.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
