--- a/PROJECT-REACT-JAVA/Barber_Booking/package.json
+++ b/PROJECT-REACT-JAVA/Barber_Booking/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.523.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
