--- a/PROJECT-REACT-JAVA/Barber_Booking/package.json
+++ b/PROJECT-REACT-JAVA/Barber_Booking/package.json
@@ -31,7 +31,8 @@
     "react-transition-group": "^4.4.5",
     "recharts": "^3.0.2",
     "redux-saga": "^1.3.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
