--- a/PROJECT-REACT-JAVA/Barber_Booking/package.json
+++ b/PROJECT-REACT-JAVA/Barber_Booking/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.523.0",
     "moment": "^2.30.1",
@@ -32,6 +33,7 @@
     "recharts": "^3.0.2",
     "redux-saga": "^1.3.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.19",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
