--- a/message-vn.properties
+++ b/message-vn.properties
@@ -170,5 +170,16 @@ BS-CB-41=Bạn không có quyền thực hiện thao tác với combo này.
 
 
 
+6789012345
 
- làm theo giao diện này :https://themes.sikidodemo.com/demo/barbershop-demo-45
+7890123456
+8901234567
+
+
+
+ làm theo giao diện này :
+ 
+ 
+ 
+  link bài học cao đẳng công thương
+ https://svonline.hcit.edu.vn/Login.aspx
